--- a/Milanovic Seminar3/AlgebraSeminar/AlgebraSeminar/Views/Predbiljezbas/Predbiljezbe.cshtml
+++ b/Milanovic Seminar3/AlgebraSeminar/AlgebraSeminar/Views/Predbiljezbas/Predbiljezbe.cshtml
@@ -58,22 +58,20 @@
 
             <a class="button" style="text-decoration:none" href="\Predbiljezbas\Predbiljezba">Predbiljezba </a>
             <a class="button" style="text-decoration:none" href="\Seminars\Seminari">Seminari </a>
-            <a class="button" style="text-decoration:none" href="\Predbiljezbas\Predbiljezbe">Predbiljezbe</a>
+            <a class="button" style="text-decoration:none" href="\Predbiljezbas\Predbiljezbe">Predbiljezbe </a>
 
         </div>
     </div>
 
     <p>
-        @using (Html.BeginForm("Predbiljezba", "Predbiljezbas", FormMethod.Get))
+        @using (Html.BeginForm("Predbiljezbe", "Predbiljezbas", FormMethod.Get))
         {
             <b>Pretraži naziv:</b>
             @Html.TextBox("pretrazi") <input type="submit" value="Pretrazi" />
         }
     </p>
 
-    <br />
-    <h6>Popis seminara koji se održavaju u Algebri:</h6>
-    <br />
+  
 
     <style>
         table, th, td {
@@ -87,29 +85,39 @@
         }
     </style>
 
+
     <table style="width:100%">
         <tr>
+
             <td></td>
             <td>Naziv</td>
-            <td>Opis</td>
+            <td>Ime</td>
+            <td>Prezime</td>
             <td>Datum</td>
-            <td>Predavac</td>
+            <td>Adresa</td>
+            <td>Email</td>
+            <td>Telefon</td>
+            <td>Status</td>
 
 
             @foreach (var item in Model)
             {
-            <tr>
+        <tr>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.IdPredbiljezba">Odaberi</a>
+            </td>
+            <td>@item.Naziv</td>
+            <td>@item.Ime</td>
+            <td>@item.Prezime</td>
+            <td>@Convert.ToString(string.Format("{0:dd/MM/yyyy}", item.Datum))</td>
+            <td>@item.Adresa</td>
+            <td>@item.Email</td>
+            <td>@item.Telefon</td>
+            <td>@item.Status</td>
 
-                <td>
-                    <a asp-action="Create" asp-route-id="@item.seminarVm.IdSeminar">Odaberi</a>
-                </td>
-                <td>@item.seminarVm.Naziv</td>
-                <td>@item.seminarVm.Opis</td>
-                <td>@item.seminarVm.Datum</td>
-                <td>@item.seminarVm.Predavac</td>
-            </tr>
+            <td>@Html.DisplayFor(modelItem => item.predbiljezbaVm.Status)</td>
+        </tr>
         }
-
 
 
         </table>
